# mtnetlib

./: CMakeLists.txt  README.md  run
client/: CMakeLists.txt  client.cpp
include/: shared.h
server/: CMakeLists.txt  server.cpp
